# http_client

./: Cargo.toml  LICENSE.md  Makefile
src/: error.rs  hexdump.rs  json.rs  lib.rs  request.rs  response.rs
tests/: get.rs  get_custom.rs  get_json.rs  http_error.rs
