[package]
name = "http_client"
version = "0.4.2"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

curl = "0.4"
url = "2.0"

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
