[package]
name = "chipp_http"
version = "1.0.2"
description = "curl-based HTTP client library"
repository = "https://github.com/chipp/http_client"
license = "MIT"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

curl = "0.4"
url = "2.0"

log = "0.4"

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
