[package]
name = "chipp_http"
version = "1.1.0"
description = "curl-based HTTP client library"
repository = "https://github.com/chipp/http_client"
license = "MIT"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2021"

[dependencies]
futures-channel = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

curl = "0.4"
url = "2.5"

log = "0.4"

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
